--- a/simulations/decentralized/omnetpp.ini
+++ b/simulations/decentralized/omnetpp.ini
@@ -3,7 +3,7 @@ output-scalar-file-append = false
 
 # Network configuration 
 network = mecRT.simulations.decentralized.DeMEC
-sim-time-limit = 900s 
+# sim-time-limit = 900s 
 warmup-period = 0s 
 seed-set = 12345	# set a fixed seed for repeating experiments
 
@@ -135,11 +135,6 @@ sim-time-limit = 100s
 extends = Uploading
 
 sim-time-limit = 900s
-**.rescheduleAll = true
-*.numUe = 80 	# 80
-**.srsDistanceCheck = true  # disable the checking the distance for SRS transmission, for testing purpose
-**.countExeTime = true
-
 # **.fairFactor = 1    # the fairness factor for the scheduler
 # *.ue[*].app[*].dlScale = 1    # the scale for the deadline of the app, default is 1.0. dl = dl / dlScale
 # **.serverExeScale = 3.0   # the scale for the server execution time for database, default is 1.0
@@ -148,121 +143,58 @@ sim-time-limit = 900s
 **.scheduleScheme = "${scheme=Greedy, FastSA, GameTheory, GraphMatch}"	# "Greedy", "FastSA", "GameTheory", "GraphMatch"
 **.scheduleInterval = ${interval=5, 10, 15}s	# ${interval=5, 10, 15, 20}s
 **.pilotMode = "MAX_CQI"   # "${pilot=MAX_CQI, MEDIAN_CQI, MIN_CQI}"
-# **.rescheduleAll = ${rsAll=true, false}	# true, false
-# **.countExeTime = ${countTime=true, false}	# whether to count the execution time of schedule scheme, default is true
 
 # Statistics 
 output-scalar-file = ${resultdir}/${configname}/${scheme}-interval-${interval}-appCount-${appCount}.sca
 output-vector-file = ${resultdir}/${configname}/${scheme}-interval-${interval}-appCount-${appCount}.vec
 # example: Greedy-interval-10-appCount-3.sca, Greedy-interval-10-appCount-3.vec
 
+# --------------------------------------------------------#   
+[Config LinkFailure]    # Experiment without network failure
+extends = Uploading
+
+sim-time-limit = 900s
+
+*.ue[*].numApps = 3
+**.scheduleScheme = "FastSA"	# "Greedy", "FastSA", "GameTheory", "GraphMatch"
+**.scheduleInterval = 10s	# ${interval=5, 10, 15, 20}s
+**.pilotMode = "MAX_CQI"   # "${pilot=MAX_CQI, MEDIAN_CQI, MIN_CQI}"
+
+*.gnb[*].ospf.helloInterval = 0.1s
+
+############### Fault Configuration #################
+*.database.linkErrorInjection = true
+*.database.linkErrorProb = ${prob=0.2, 0.3, 0.4}
+# *.database.serverErrorInjection = true
+# *.database.serverErrorProb = 0.1
+*.database.failureRecoveryInterval = 50s
+
+# Statistics 
+output-scalar-file = ${resultdir}/${configname}/$FastSA-errorProb-${prob}.sca
+output-vector-file = ${resultdir}/${configname}/$FastSA-errorProb-${prob}.vec
+# example: Greedy-interval-10-appCount-3.sca, Greedy-interval-10-appCount-3.vec
 
 # --------------------------------------------------------#   
-[Config Full-Test-MEC-2]    # MEC with backhaul network, 32 combinations
+[Config NodeFailure]    # Experiment without network failure
 extends = Uploading
 
-*.carrierAggregation.componentCarrier[0].numBands = 27
-**.numRbPerBand = 10
-*.gnb[*].server.cmpUnitTotal = 30
-
-**.enableBackhaul = true	# whether to enable the backhaul, default is false
 sim-time-limit = 900s
-*.numUe = ${ueCount=80} 	# 80
-*.numGnb = ${gnbCount=15} 	# 15
-**.srsDistanceCheck = true  # enable the distance checking for SRS transmission
-*.ue[*].app[*].dlScale = 1    # the scale for the deadline of the app, default is 1.0. dl = dl / dlScale
 
-**.fairFactor = ${fairnessFactor=0.17, 0.25}    # 0.17, 0.2, 0.25, 0.5 the fairness factor for the scheduler, 1/6, 1/4
-*.ue[*].numApps = ${appCount=4}
-**.scheduleScheme = "${scheme=FwdGreedy, FwdGameTheory, FwdQuickLR, FwdGraphMatch}"	# FwdGreedy, FwdGameTheory, FwdQuickLR, FwdGraphMatch
-**.scheduleInterval = ${interval=10}s	# ${interval=5, 10, 15, 20}s
-**.pilotMode = "${pilot=MAX_CQI, MIN_CQI}"     # "MAX_CQI", "MIN_CQI", "MEDIAN_CQI"
-**.rescheduleAll = ${rsAll=true, false}	# true, false
-**.countExeTime = ${countTime=true}	# whether to count the execution time of schedule scheme, default is true
+*.ue[*].numApps = 3
+**.scheduleScheme = "FastSA"	# "Greedy", "FastSA", "GameTheory", "GraphMatch"
+**.scheduleInterval = 10s	# ${interval=5, 10, 15, 20}s
+**.pilotMode = "MAX_CQI"   # "${pilot=MAX_CQI, MEDIAN_CQI, MIN_CQI}"
+
+*.gnb[*].ospf.helloInterval = 0.1s
+
+############### Fault Configuration #################
+# *.database.linkErrorInjection = true
+# *.database.linkErrorProb = ${prob=0.2, 0.3, 0.4}
+*.database.serverErrorInjection = true
+*.database.serverErrorProb = ${prob=0.1, 0.2, 0.25}     # fail 2, 3, 4 edge servers
+*.database.failureRecoveryInterval = 50s
 
 # Statistics 
-output-scalar-file = ${resultdir}/${configname}/scheAll-${rsAll}-factor-${fairnessFactor}-${scheme}-pilot-${pilot}.sca
-output-vector-file = ${resultdir}/${configname}/scheAll-${rsAll}-factor-${fairnessFactor}-${scheme}-pilot-${pilot}.vec
-
-[Config Full-Test-MEC-2-05]    # MEC with backhaul network, 16 combinations
-extends = Uploading
-
-*.carrierAggregation.componentCarrier[0].numBands = 27
-**.numRbPerBand = 10
-*.gnb[*].server.cmpUnitTotal = 30
-
-**.enableBackhaul = true	# whether to enable the backhaul, default is false
-sim-time-limit = 900s
-*.numUe = ${ueCount=80} 	# 80
-*.numGnb = ${gnbCount=15} 	# 15
-**.srsDistanceCheck = true  # enable the distance checking for SRS transmission
-*.ue[*].app[*].dlScale = 1    # the scale for the deadline of the app, default is 1.0. dl = dl / dlScale
-
-**.fairFactor = ${fairnessFactor=0.5}    # the fairness factor for the scheduler, 1/2
-**.scheduler.cuStep = 2
-**.scheduler.rbStep = 2
-*.ue[*].numApps = ${appCount=4}
-**.scheduleScheme = "${scheme=FwdGreedy, FwdGameTheory, FwdQuickLR, FwdGraphMatch}"	# FwdGreedy, FwdGameTheory, FwdQuickLR, FwdGraphMatch
-**.scheduleInterval = ${interval=10}s	# ${interval=5, 10, 15, 20}s
-**.pilotMode = "${pilot=MAX_CQI, MIN_CQI}"     # "MAX_CQI", "MIN_CQI", "MEDIAN_CQI"
-**.rescheduleAll = ${rsAll=true, false}	# true, false
-**.countExeTime = ${countTime=true}	# whether to count the execution time of schedule scheme, default is true
-
-# Statistics 
-output-scalar-file = ${resultdir}/Full-Test-MEC-2/scheAll-${rsAll}-factor-${fairnessFactor}-${scheme}-pilot-${pilot}.sca
-output-vector-file = ${resultdir}/Full-Test-MEC-2/scheAll-${rsAll}-factor-${fairnessFactor}-${scheme}-pilot-${pilot}.vec
-
-# --------------------------------------------------------#   
-
-[Config AppCount-Test-MEC-1]    # MEC without backhaul network, 15 combinations
-extends = Uploading
-
-**.enableBackhaul = false	# whether to enable the backhaul, default is false
-sim-time-limit = 900s
-*.numUe = ${ueCount=80} 	# 80
-*.numGnb = ${gnbCount=15} 	# 15
-**.srsDistanceCheck = true  # enable the distance checking for SRS transmission
-**.fairFactor = 1    # the fairness factor for the scheduler
-*.ue[*].app[*].dlScale = 1.5    # the scale for the deadline of the app, default is 1.0. dl = dl / dlScale
-**.serverExeScale = 3.0   # the scale for the server execution time for database, default is 1.0
-
-*.ue[*].numApps = ${appCount=2, 3, 4}
-**.scheduleScheme = "${scheme=Greedy, FastLR, GameTheory, Iterative, SARound}"	# Greedy, FastLR, GameTheory, Iterative, SARound
-**.scheduleInterval = ${interval=10}s	# ${interval=5, 10, 15, 20}s
-**.pilotMode = "${pilot=MEDIAN_CQI}"
-**.rescheduleAll = ${rsAll=true}	# true, false
-**.countExeTime = ${countTime=true}
-
-# Statistics 
-output-scalar-file = ${resultdir}/${configname}/scheme-${scheme}-appCount-${appCount}.sca
-output-vector-file = ${resultdir}/${configname}/scheme-${scheme}-appCount-${appCount}.vec
-
-
-# --------------------------------------------------------#   
-
-[Config AppCount-Test-MEC-2]    # MEC without backhaul network, 12 combinations
-extends = Uploading
-
-*.carrierAggregation.componentCarrier[0].numBands = 27
-**.numRbPerBand = 10
-*.gnb[*].server.cmpUnitTotal = 30
-
-**.enableBackhaul = true	# whether to enable the backhaul, default is false
-sim-time-limit = 900s
-*.numUe = ${ueCount=80} 	# 80
-*.numGnb = ${gnbCount=15} 	# 15
-**.srsDistanceCheck = true  # enable the distance checking for SRS transmission
-*.ue[*].app[*].dlScale = 1    # 0.667 the scale for the deadline of the app, default is 1.0. dl = dl / dlScale
-
-**.fairFactor = 0.17    # the fairness factor for the scheduler
-*.ue[*].numApps = ${appCount=4}  # 2, 3, 4
-**.scheduleScheme = "${scheme=FwdGreedy, FwdGameTheory, FwdQuickLR, FwdGraphMatch}"	# Greedy, FastLR, GameTheory, Iterative, SARound
-**.scheduleInterval = ${interval=10}s	# ${interval=5, 10, 15, 20}s
-**.pilotMode = "${pilot=MAX_CQI}"
-**.rescheduleAll = ${rsAll=true}	# true, false
-**.countExeTime = ${countTime=true}
-
-# Statistics 
-output-scalar-file = ${resultdir}/${configname}/scheme-${scheme}-appCount-${appCount}.sca
-output-vector-file = ${resultdir}/${configname}/scheme-${scheme}-appCount-${appCount}.vec
-
+output-scalar-file = ${resultdir}/${configname}/$FastSA-errorProb-${prob}.sca
+output-vector-file = ${resultdir}/${configname}/$FastSA-errorProb-${prob}.vec
+# example: Greedy-interval-10-appCount-3.sca, Greedy-interval-10-appCount-3.vec
