fault experiment done

--- a/simulations/decentralized/omnetpp.ini
+++ b/simulations/decentralized/omnetpp.ini
@@ -119,11 +119,11 @@ sim-time-limit = 100s
 *.gnb[*].ospf.helloInterval = 1s
 
 ############### Fault Configuration #################
-*.database.linkErrorInjection = true
-*.database.linkErrorProb = 0.2
+# *.database.linkErrorInjection = true
+# *.database.linkErrorProb = 0.2
 # *.database.serverErrorInjection = true
 # *.database.serverErrorProb = 0.1
-*.database.failureRecoveryInterval = 50s
+# *.database.failureRecoveryInterval = 50s
 
 # Statistics 
 #output-scalar-file = ${resultdir}/${configname}/${scheme}-appCount-1-interval-10-rsAll-true-ratio-1.sca
@@ -155,7 +155,7 @@ extends = Uploading
 
 sim-time-limit = 900s
 
-*.ue[*].numApps = 3
+*.ue[*].numApps = ${appCount=4}
 **.scheduleScheme = "FastSA"	# "Greedy", "FastSA", "GameTheory", "GraphMatch"
 **.scheduleInterval = 10s	# ${interval=5, 10, 15, 20}s
 **.pilotMode = "MAX_CQI"   # "${pilot=MAX_CQI, MEDIAN_CQI, MIN_CQI}"
@@ -164,23 +164,24 @@ sim-time-limit = 900s
 
 ############### Fault Configuration #################
 *.database.linkErrorInjection = true
-*.database.linkErrorProb = ${prob=0.2, 0.3, 0.4}
+*.database.linkErrorProb = ${prob=0, 0.2, 0.4}
 # *.database.serverErrorInjection = true
 # *.database.serverErrorProb = 0.1
 *.database.failureRecoveryInterval = 50s
 
 # Statistics 
-output-scalar-file = ${resultdir}/${configname}/$FastSA-errorProb-${prob}.sca
-output-vector-file = ${resultdir}/${configname}/$FastSA-errorProb-${prob}.vec
-# example: Greedy-interval-10-appCount-3.sca, Greedy-interval-10-appCount-3.vec
+output-scalar-file = ${resultdir}/${configname}/FastSA-appCount-${appCount}-errorProb-${prob}.sca
+output-vector-file = ${resultdir}/${configname}/FastSA-appCount-${appCount}-errorProb-${prob}.vec
+
 
 # --------------------------------------------------------#   
 [Config NodeFailure]    # Experiment without network failure
 extends = Uploading
 
 sim-time-limit = 900s
+seed-set = 2025
 
-*.ue[*].numApps = 3
+*.ue[*].numApps = ${appCount=4}
 **.scheduleScheme = "FastSA"	# "Greedy", "FastSA", "GameTheory", "GraphMatch"
 **.scheduleInterval = 10s	# ${interval=5, 10, 15, 20}s
 **.pilotMode = "MAX_CQI"   # "${pilot=MAX_CQI, MEDIAN_CQI, MIN_CQI}"
@@ -189,12 +190,12 @@ sim-time-limit = 900s
 
 ############### Fault Configuration #################
 # *.database.linkErrorInjection = true
-# *.database.linkErrorProb = ${prob=0.2, 0.3, 0.4}
+# *.database.linkErrorProb = ${prob=0.2, 0.4}
 *.database.serverErrorInjection = true
-*.database.serverErrorProb = ${prob=0.1, 0.2, 0.25} # fail 2, 3, 4 edge servers
+*.database.serverErrorProb = ${prob=0, 0.2, 0.4} # 0.2, 0.4
 *.database.failureRecoveryInterval = 50s
 
 # Statistics 
-output-scalar-file = ${resultdir}/${configname}/$FastSA-errorProb-${prob}.sca
-output-vector-file = ${resultdir}/${configname}/$FastSA-errorProb-${prob}.vec
-# example: Greedy-interval-10-appCount-3.sca, Greedy-interval-10-appCount-3.vec
+output-scalar-file = ${resultdir}/${configname}/FastSA-appCount-${appCount}-errorProb-${prob}.sca
+output-vector-file = ${resultdir}/${configname}/FastSA-appCount-${appCount}-errorProb-${prob}.vec
+
