update request broadcast rule

--- a/simulations/decentralized/omnetpp.ini
+++ b/simulations/decentralized/omnetpp.ini
@@ -87,7 +87,7 @@ sim-time-limit = 100s
 # Greedy, FastLR, GameTheory, Iterative, SARound for VEC without backhaul network
 # FwdGreedy, FwdGameTheory, FwdQuickLR, FwdGraphMatch for VEC with backhaul network
 **.scheduleInterval = 10s	# 5, 10, 15, 20
-**.scheduleScheme = "GraphMatch"    # "Greedy", "FastSA", "GameTheory", "GraphMatch"
+**.scheduleScheme = "FastSA"    # "Greedy", "FastSA", "GameTheory", "GraphMatch"
 # **.fairFactor = 0.5    # the fairness factor for the scheduler, i.e., 0.5
 **.offloadOverhead = 0.001s
 # **.scheduler.srvTimeScale_ = 1.0
