update global scheduling time synchronization logic

--- a/simulations/decentralized/omnetpp.ini
+++ b/simulations/decentralized/omnetpp.ini
@@ -154,6 +154,7 @@ output-vector-file = ${resultdir}/${configname}/${scheme}-interval-${interval}-a
 extends = Uploading
 
 sim-time-limit = 900s
+seed-set = 2025
 
 *.ue[*].numApps = ${appCount=4}
 **.scheduleScheme = "FastSA"	# "Greedy", "FastSA", "GameTheory", "GraphMatch"
@@ -198,4 +199,30 @@ seed-set = 2025
 # Statistics 
 output-scalar-file = ${resultdir}/${configname}/FastSA-appCount-${appCount}-errorProb-${prob}.sca
 output-vector-file = ${resultdir}/${configname}/FastSA-appCount-${appCount}-errorProb-${prob}.vec
+
+
+# --------------------------------------------------------#   
+[Config NodeFailureExample]    # Experiment without network failure
+extends = Uploading
+
+sim-time-limit = 900s
+seed-set = 2025
+
+*.ue[*].numApps = ${appCount=4}
+**.scheduleScheme = "FastSA"	# "Greedy", "FastSA", "GameTheory", "GraphMatch"
+**.scheduleInterval = 10s	# ${interval=5, 10, 15, 20}s
+**.pilotMode = "MAX_CQI"   # "${pilot=MAX_CQI, MEDIAN_CQI, MIN_CQI}"
+
+*.gnb[*].ospf.helloInterval = 0.1s
+
+############### Fault Configuration #################
+# *.database.linkErrorInjection = true
+# *.database.linkErrorProb = ${prob=0.2, 0.4}
+*.database.serverErrorInjection = true
+*.database.serverErrorProb = ${prob=0.4} # 0.2, 0.4
+*.database.failureRecoveryInterval = 50s
+
+# Statistics 
+# output-scalar-file = ${resultdir}/${configname}/FastSA-appCount-${appCount}-errorProb-${prob}.sca
+# output-vector-file = ${resultdir}/${configname}/FastSA-appCount-${appCount}-errorProb-${prob}.vec
 
