add global scheduler freeze control

--- a/simulations/decentralized/omnetpp.ini
+++ b/simulations/decentralized/omnetpp.ini
@@ -135,6 +135,7 @@ sim-time-limit = 100s
 extends = Uploading
 
 sim-time-limit = 900s
+seed-set = 2025
 # **.fairFactor = 1    # the fairness factor for the scheduler
 # *.ue[*].app[*].dlScale = 1    # the scale for the deadline of the app, default is 1.0. dl = dl / dlScale
 # **.serverExeScale = 3.0   # the scale for the server execution time for database, default is 1.0
@@ -156,23 +157,25 @@ extends = Uploading
 sim-time-limit = 900s
 seed-set = 2025
 
-*.ue[*].numApps = ${appCount=4}
+*.ue[*].numApps = 4
 **.scheduleScheme = "FastSA"	# "Greedy", "FastSA", "GameTheory", "GraphMatch"
 **.scheduleInterval = 10s	# ${interval=5, 10, 15, 20}s
 **.pilotMode = "MAX_CQI"   # "${pilot=MAX_CQI, MEDIAN_CQI, MIN_CQI}"
 
 *.gnb[*].ospf.helloInterval = 0.1s
+*.gnb[*].ospf.routeUpdate = ${routeUpdate=true, false}
+# true: enable route update; false: disable route update when interface goes up/down
 
 ############### Fault Configuration #################
 *.database.linkErrorInjection = true
-*.database.linkErrorProb = ${prob=0, 0.2, 0.4}
-# *.database.serverErrorInjection = true
+*.database.linkErrorProb = ${prob=0.2, 0.4}
+*.database.serverErrorInjection = false
 # *.database.serverErrorProb = 0.1
 *.database.failureRecoveryInterval = 50s
 
 # Statistics 
-output-scalar-file = ${resultdir}/${configname}/FastSA-appCount-${appCount}-errorProb-${prob}.sca
-output-vector-file = ${resultdir}/${configname}/FastSA-appCount-${appCount}-errorProb-${prob}.vec
+output-scalar-file = ${resultdir}/${configname}/FastSA-routeUpdate-${routeUpdate}-errorProb-${prob}.sca
+output-vector-file = ${resultdir}/${configname}/FastSA-routeUpdate-${routeUpdate}-errorProb-${prob}.vec
 
 
 # --------------------------------------------------------#   
@@ -182,45 +185,47 @@ extends = Uploading
 sim-time-limit = 900s
 seed-set = 2025
 
-*.ue[*].numApps = ${appCount=4}
+*.ue[*].numApps = 4
 **.scheduleScheme = "FastSA"	# "Greedy", "FastSA", "GameTheory", "GraphMatch"
 **.scheduleInterval = 10s	# ${interval=5, 10, 15, 20}s
 **.pilotMode = "MAX_CQI"   # "${pilot=MAX_CQI, MEDIAN_CQI, MIN_CQI}"
 
 *.gnb[*].ospf.helloInterval = 0.1s
+*.gnb[*].ospf.routeUpdate = ${routeUpdate=true, false}
+# true: enable route update; false: disable route update when interface goes up/down
 
 ############### Fault Configuration #################
-# *.database.linkErrorInjection = true
+*.database.linkErrorInjection = false
 # *.database.linkErrorProb = ${prob=0.2, 0.4}
 *.database.serverErrorInjection = true
-*.database.serverErrorProb = ${prob=0, 0.2, 0.4} # 0.2, 0.4
+*.database.serverErrorProb = ${prob=0.2, 0.4} # 0.2, 0.4
 *.database.failureRecoveryInterval = 50s
 
 # Statistics 
-output-scalar-file = ${resultdir}/${configname}/FastSA-appCount-${appCount}-errorProb-${prob}.sca
-output-vector-file = ${resultdir}/${configname}/FastSA-appCount-${appCount}-errorProb-${prob}.vec
+output-scalar-file = ${resultdir}/${configname}/FastSA-routeUpdate-${routeUpdate}-errorProb-${prob}.sca
+output-vector-file = ${resultdir}/${configname}/FastSA-routeUpdate-${routeUpdate}-errorProb-${prob}.vec
 
 
 # --------------------------------------------------------#   
-[Config NodeFailureExample]    # Experiment without network failure
-extends = Uploading
+# [Config NodeFailureExample]    # Experiment without network failure
+# extends = Uploading
 
-sim-time-limit = 900s
-seed-set = 2025
+# sim-time-limit = 900s
+# seed-set = 2025
 
-*.ue[*].numApps = ${appCount=4}
-**.scheduleScheme = "FastSA"	# "Greedy", "FastSA", "GameTheory", "GraphMatch"
-**.scheduleInterval = 10s	# ${interval=5, 10, 15, 20}s
-**.pilotMode = "MAX_CQI"   # "${pilot=MAX_CQI, MEDIAN_CQI, MIN_CQI}"
+# *.ue[*].numApps = ${appCount=4}
+# **.scheduleScheme = "FastSA"	# "Greedy", "FastSA", "GameTheory", "GraphMatch"
+# **.scheduleInterval = 10s	# ${interval=5, 10, 15, 20}s
+# **.pilotMode = "MAX_CQI"   # "${pilot=MAX_CQI, MEDIAN_CQI, MIN_CQI}"
 
-*.gnb[*].ospf.helloInterval = 0.1s
+# *.gnb[*].ospf.helloInterval = 0.1s
 
-############### Fault Configuration #################
-# *.database.linkErrorInjection = true
-# *.database.linkErrorProb = ${prob=0.2, 0.4}
-*.database.serverErrorInjection = true
-*.database.serverErrorProb = ${prob=0.4} # 0.2, 0.4
-*.database.failureRecoveryInterval = 50s
+# ############### Fault Configuration #################
+# # *.database.linkErrorInjection = true
+# # *.database.linkErrorProb = ${prob=0.2, 0.4}
+# *.database.serverErrorInjection = true
+# *.database.serverErrorProb = ${prob=0.4} # 0.2, 0.4
+# *.database.failureRecoveryInterval = 50s
 
 # Statistics 
 # output-scalar-file = ${resultdir}/${configname}/FastSA-appCount-${appCount}-errorProb-${prob}.sca
