--- a/simulations/decentralized/omnetpp.ini
+++ b/simulations/decentralized/omnetpp.ini
@@ -163,10 +163,10 @@ seed-set = 2025
 **.pilotMode = "MAX_CQI"   # "${pilot=MAX_CQI, MEDIAN_CQI, MIN_CQI}"
 
 *.gnb[*].ospf.helloInterval = 0.1s
-*.gnb[*].ospf.routeUpdate = ${routeUpdate=true, false}
-# true: enable route update; false: disable route update when interface goes up/down
 
 ############### Fault Configuration #################
+*.database.routeUpdate = ${routeUpdate=true, false}
+# true: enable route update; false: disable route update when interface goes up/down
 *.database.linkErrorInjection = true
 *.database.linkErrorProb = ${prob=0.2, 0.4}
 *.database.serverErrorInjection = false
@@ -191,10 +191,10 @@ seed-set = 2025
 **.pilotMode = "MAX_CQI"   # "${pilot=MAX_CQI, MEDIAN_CQI, MIN_CQI}"
 
 *.gnb[*].ospf.helloInterval = 0.1s
-*.gnb[*].ospf.routeUpdate = ${routeUpdate=true, false}
-# true: enable route update; false: disable route update when interface goes up/down
 
 ############### Fault Configuration #################
+*.database.routeUpdate = ${routeUpdate=true, false}
+# true: enable route update; false: disable route update when interface goes up/down
 *.database.linkErrorInjection = false
 # *.database.linkErrorProb = ${prob=0.2, 0.4}
 *.database.serverErrorInjection = true
@@ -207,27 +207,28 @@ output-vector-file = ${resultdir}/${configname}/FastSA-routeUpdate-${routeUpdate
 
 
 # --------------------------------------------------------#   
-# [Config NodeFailureExample]    # Experiment without network failure
-# extends = Uploading
+[Config FailureTest]    # Experiment without network failure
+extends = Uploading
 
-# sim-time-limit = 900s
-# seed-set = 2025
+sim-time-limit = 900s
+seed-set = 2025
 
-# *.ue[*].numApps = ${appCount=4}
-# **.scheduleScheme = "FastSA"	# "Greedy", "FastSA", "GameTheory", "GraphMatch"
-# **.scheduleInterval = 10s	# ${interval=5, 10, 15, 20}s
-# **.pilotMode = "MAX_CQI"   # "${pilot=MAX_CQI, MEDIAN_CQI, MIN_CQI}"
+*.ue[*].numApps = 4
+**.scheduleScheme = "FastSA"	# "Greedy", "FastSA", "GameTheory", "GraphMatch"
+**.scheduleInterval = 10s	# ${interval=5, 10, 15, 20}s
+**.pilotMode = "MAX_CQI"   # "${pilot=MAX_CQI, MEDIAN_CQI, MIN_CQI}"
 
-# *.gnb[*].ospf.helloInterval = 0.1s
+*.gnb[*].ospf.helloInterval = 0.1s
 
-# ############### Fault Configuration #################
-# # *.database.linkErrorInjection = true
-# # *.database.linkErrorProb = ${prob=0.2, 0.4}
-# *.database.serverErrorInjection = true
-# *.database.serverErrorProb = ${prob=0.4} # 0.2, 0.4
-# *.database.failureRecoveryInterval = 50s
+############### Fault Configuration #################
+*.database.routeUpdate = true
+*.database.linkErrorInjection = true
+*.database.linkErrorProb = 0.2
+#*.database.serverErrorInjection = true
+#*.database.serverErrorProb = 0.2
+*.database.failureRecoveryInterval = 50s
 
 # Statistics 
-# output-scalar-file = ${resultdir}/${configname}/FastSA-appCount-${appCount}-errorProb-${prob}.sca
-# output-vector-file = ${resultdir}/${configname}/FastSA-appCount-${appCount}-errorProb-${prob}.vec
+output-scalar-file = ${resultdir}/${configname}.sca
+output-vector-file = ${resultdir}/${configname}.vec
 
