update scheme and link rate

--- a/simulations/decentralized/omnetpp-fault.ini
+++ b/simulations/decentralized/omnetpp-fault.ini
@@ -158,7 +158,7 @@ extends = Uploading
 sim-time-limit = 900s
 seed-set = 2025
 
-#*.ue[*].numApps = 4
+*.ue[*].numApps = 4
 **.scheduleScheme = "FastSA"	# "Greedy", "FastSA", "GameTheory", "GraphMatch"
 **.scheduleInterval = 10s	# ${interval=5, 10, 15, 20}s
 **.pilotMode = "MAX_CQI"   # "${pilot=MAX_CQI, MEDIAN_CQI, MIN_CQI}"
@@ -186,7 +186,7 @@ extends = Uploading
 sim-time-limit = 900s
 seed-set = 2025
 
-#*.ue[*].numApps = 4
+*.ue[*].numApps = 4
 **.scheduleScheme = "FastSA"	# "Greedy", "FastSA", "GameTheory", "GraphMatch"
 **.scheduleInterval = 10s	# ${interval=5, 10, 15, 20}s
 **.pilotMode = "MAX_CQI"   # "${pilot=MAX_CQI, MEDIAN_CQI, MIN_CQI}"
