--- a/simulations/decentralized/omnetpp.ini
+++ b/simulations/decentralized/omnetpp.ini
@@ -141,7 +141,7 @@ seed-set = 2025
 # **.serverExeScale = 3.0   # the scale for the server execution time for database, default is 1.0
 
 *.ue[*].numApps = ${appCount=3, 4}
-**.scheduleScheme = "${scheme=Greedy, FastSA, GameTheory, GraphMatch}"	# "Greedy", "FastSA", "GameTheory", "GraphMatch"
+**.scheduleScheme = "${scheme=FastSANF}"	# Greedy, FastSA, GameTheory, GraphMatch
 **.scheduleInterval = ${interval=5, 10, 15}s	# ${interval=5, 10, 15, 20}s
 **.pilotMode = "MAX_CQI"   # "${pilot=MAX_CQI, MEDIAN_CQI, MIN_CQI}"
 
