update experiment config

--- a/simulations/decentralized/omnetpp-fault.ini
+++ b/simulations/decentralized/omnetpp-fault.ini
@@ -82,7 +82,7 @@ sim-time-limit = 100s
 *.numUe = 80 	# 80
 **.srsDistanceCheck = true  # disable the checking the distance for SRS transmission, for testing purpose
 **.countExeTime = true
-**.maxHops = 4
+# **.maxHops = 4
 
 ############### Scheduler Configuration #################
 # Greedy, FastLR, GameTheory, Iterative, SARound for VEC without backhaul network
@@ -130,30 +130,29 @@ sim-time-limit = 100s
 #output-scalar-file = ${resultdir}/${configname}/${scheme}-appCount-1-interval-10-rsAll-true-ratio-1.sca
 #output-vector-file = ${resultdir}/${configname}/${scheme}-appCount-1-interval-10-rsAll-true-ratio-1.vec
 
-
 # --------------------------------------------------------#   
-[Config Normal]    # Experiment without network failure
+[Config FailureBase]    # Experiment without network failure
 extends = Uploading
+**.maxHops = 4
 
 sim-time-limit = 900s
 seed-set = 2025
-# **.fairFactor = 1    # the fairness factor for the scheduler
-# *.ue[*].app[*].dlScale = 1    # the scale for the deadline of the app, default is 1.0. dl = dl / dlScale
-# **.serverExeScale = 3.0   # the scale for the server execution time for database, default is 1.0
 
-*.ue[*].numApps = ${appCount=3, 4}
-**.scheduleScheme = "${scheme=Greedy, FastSA, GameTheory, GraphMatch}"	# "Greedy", "FastSA", "GameTheory", "GraphMatch"
-**.scheduleInterval = ${interval=5, 10, 15}s	# ${interval=5, 10, 15, 20}s
+*.ue[*].numApps = 4
+**.scheduleScheme = "FastSA"	# "Greedy", "FastSA", "GameTheory", "GraphMatch"
+**.scheduleInterval = 10s	# ${interval=5, 10, 15, 20}s
 **.pilotMode = "MAX_CQI"   # "${pilot=MAX_CQI, MEDIAN_CQI, MIN_CQI}"
 
+*.gnb[*].ospf.helloInterval = 0.1s
+
 # Statistics 
-output-scalar-file = ${resultdir}/${configname}/${scheme}-interval-${interval}-appCount-${appCount}.sca
-output-vector-file = ${resultdir}/${configname}/${scheme}-interval-${interval}-appCount-${appCount}.vec
-# example: Greedy-interval-10-appCount-3.sca, Greedy-interval-10-appCount-3.vec
+output-scalar-file = ${resultdir}/${configname}/FastSA-FailureBase.sca
+output-vector-file = ${resultdir}/${configname}/FastSA-FailureBase.vec
 
 # --------------------------------------------------------#   
 [Config LinkFailure]    # Experiment without network failure
 extends = Uploading
+**.maxHops = 4
 
 sim-time-limit = 900s
 seed-set = 2025
@@ -169,7 +168,7 @@ seed-set = 2025
 *.database.routeUpdate = ${routeUpdate=true, false}   # true, false
 # true: enable route update; false: disable route update when interface goes up/down
 *.database.linkErrorInjection = true
-*.database.linkErrorProb = ${prob=0, 0.1, 0.2, 0.25}  # 0.1, 0.2, 0.25
+*.database.linkErrorProb = ${prob=0.1, 0.2, 0.25}  # 0.1, 0.2, 0.25
 *.database.serverErrorInjection = false
 # *.database.serverErrorProb = 0.1
 *.database.failureRecoveryInterval = 50s
@@ -182,6 +181,7 @@ output-vector-file = ${resultdir}/${configname}/FastSA-routeUpdate-${routeUpdate
 # --------------------------------------------------------#   
 [Config NodeFailure]    # Experiment without network failure
 extends = Uploading
+**.maxHops = 4
 
 sim-time-limit = 900s
 seed-set = 2025
@@ -199,7 +199,7 @@ seed-set = 2025
 *.database.linkErrorInjection = false
 # *.database.linkErrorProb = ${prob=0.2, 0.4}
 *.database.serverErrorInjection = true
-*.database.serverErrorProb = ${prob=0, 0.1, 0.2, 0.25} # fail 2, 3, 4 servers 0.1, 0.2, 
+*.database.serverErrorProb = ${prob=0.1, 0.2, 0.25} # fail 2, 3, 4 servers 0.1, 0.2, 
 *.database.failureRecoveryInterval = 50s
 
 # Statistics 
@@ -210,6 +210,7 @@ output-vector-file = ${resultdir}/${configname}/FastSA-routeUpdate-${routeUpdate
 # --------------------------------------------------------#   
 [Config FailureTest]    # Experiment without network failure
 extends = Uploading
+**.maxHops = 2
 
 sim-time-limit = 900s
 seed-set = 2025
