--- a/simulations/decentralized/omnetpp.ini
+++ b/simulations/decentralized/omnetpp.ini
@@ -2,7 +2,7 @@
 output-scalar-file-append = false 
 
 # Network configuration 
-network = mecRT.simulations.decentralized.DeMEC
+network = mecRT.simulations.decentralized.DeMECFault
 # sim-time-limit = 900s 
 warmup-period = 0s 
 seed-set = 12345	# set a fixed seed for repeating experiments
@@ -133,6 +133,7 @@ sim-time-limit = 100s
 # --------------------------------------------------------#   
 [Config Normal]    # Experiment without network failure
 extends = Uploading
+**.maxHops = 4
 
 sim-time-limit = 900s
 seed-set = 2025
@@ -141,7 +142,7 @@ seed-set = 2025
 # **.serverExeScale = 3.0   # the scale for the server execution time for database, default is 1.0
 
 *.ue[*].numApps = ${appCount=3, 4}
-**.scheduleScheme = "${scheme=FastSANF}"	# Greedy, FastSA, GameTheory, GraphMatch
+**.scheduleScheme = "${scheme=Greedy, FastSA, GameTheory, GraphMatch}"	# Greedy, FastSA, GameTheory, GraphMatch
 **.scheduleInterval = ${interval=5, 10, 15}s	# ${interval=5, 10, 15, 20}s
 **.pilotMode = "MAX_CQI"   # "${pilot=MAX_CQI, MEDIAN_CQI, MIN_CQI}"
 
@@ -149,86 +150,4 @@ seed-set = 2025
 output-scalar-file = ${resultdir}/${configname}/${scheme}-interval-${interval}-appCount-${appCount}.sca
 output-vector-file = ${resultdir}/${configname}/${scheme}-interval-${interval}-appCount-${appCount}.vec
 # example: Greedy-interval-10-appCount-3.sca, Greedy-interval-10-appCount-3.vec
-
-# --------------------------------------------------------#   
-[Config LinkFailure]    # Experiment without network failure
-extends = Uploading
-
-sim-time-limit = 900s
-seed-set = 2025
-
-*.ue[*].numApps = 4
-**.scheduleScheme = "FastSA"	# "Greedy", "FastSA", "GameTheory", "GraphMatch"
-**.scheduleInterval = 10s	# ${interval=5, 10, 15, 20}s
-**.pilotMode = "MAX_CQI"   # "${pilot=MAX_CQI, MEDIAN_CQI, MIN_CQI}"
-
-*.gnb[*].ospf.helloInterval = 0.1s
-
-############### Fault Configuration #################
-*.database.routeUpdate = ${routeUpdate=true, false}
-# true: enable route update; false: disable route update when interface goes up/down
-*.database.linkErrorInjection = true
-*.database.linkErrorProb = ${prob=0.2, 0.4}
-*.database.serverErrorInjection = false
-# *.database.serverErrorProb = 0.1
-*.database.failureRecoveryInterval = 50s
-
-# Statistics 
-output-scalar-file = ${resultdir}/${configname}/FastSA-routeUpdate-${routeUpdate}-errorProb-${prob}.sca
-output-vector-file = ${resultdir}/${configname}/FastSA-routeUpdate-${routeUpdate}-errorProb-${prob}.vec
-
-
-# --------------------------------------------------------#   
-[Config NodeFailure]    # Experiment without network failure
-extends = Uploading
-
-sim-time-limit = 900s
-seed-set = 2025
-
-*.ue[*].numApps = 4
-**.scheduleScheme = "FastSA"	# "Greedy", "FastSA", "GameTheory", "GraphMatch"
-**.scheduleInterval = 10s	# ${interval=5, 10, 15, 20}s
-**.pilotMode = "MAX_CQI"   # "${pilot=MAX_CQI, MEDIAN_CQI, MIN_CQI}"
-
-*.gnb[*].ospf.helloInterval = 0.1s
-
-############### Fault Configuration #################
-*.database.routeUpdate = ${routeUpdate=true, false}
-# true: enable route update; false: disable route update when interface goes up/down
-*.database.linkErrorInjection = false
-# *.database.linkErrorProb = ${prob=0.2, 0.4}
-*.database.serverErrorInjection = true
-*.database.serverErrorProb = ${prob=0.2, 0.4} # 0.2, 0.4
-*.database.failureRecoveryInterval = 50s
-
-# Statistics 
-output-scalar-file = ${resultdir}/${configname}/FastSA-routeUpdate-${routeUpdate}-errorProb-${prob}.sca
-output-vector-file = ${resultdir}/${configname}/FastSA-routeUpdate-${routeUpdate}-errorProb-${prob}.vec
-
-
-# --------------------------------------------------------#   
-[Config FailureTest]    # Experiment without network failure
-extends = Uploading
-
-sim-time-limit = 900s
-seed-set = 2025
-
-*.ue[*].numApps = 4
-**.scheduleScheme = "FastSA"	# "Greedy", "FastSA", "GameTheory", "GraphMatch"
-**.scheduleInterval = 10s	# ${interval=5, 10, 15, 20}s
-**.pilotMode = "MAX_CQI"   # "${pilot=MAX_CQI, MEDIAN_CQI, MIN_CQI}"
-
-*.gnb[*].ospf.helloInterval = 0.1s
-
-############### Fault Configuration #################
-*.database.routeUpdate = true
-*.database.linkErrorInjection = true
-*.database.linkErrorProb = 0.2
-#*.database.serverErrorInjection = true
-#*.database.serverErrorProb = 0.2
-*.database.failureRecoveryInterval = 50s
-
-# Statistics 
-output-scalar-file = ${resultdir}/${configname}.sca
-output-vector-file = ${resultdir}/${configname}.vec
 
