--- a/simulations/vec/VEComnetpp.ini
+++ b/simulations/vec/VEComnetpp.ini
@@ -81,10 +81,10 @@ seed-set = 12345	# set a fixed seed for repeating experiments
 
 sim-time-limit = 900s
 **.rescheduleAll = true
-*.numUe = 5 	# 80
-*.numGnb = 3 	# 15
+*.numUe = 80 	# 80
+*.numGnb = 15 	# 15
 **.srsDistanceCheck = true  # disable the checking the distance for SRS transmission, for testing purpose
-**.enableBackhaul = true	# whether to enable the backhaul, default is false
+**.enableBackhaul = false	# whether to enable the backhaul, default is false
 **.fairFactor = 1    # the fairness factor for the scheduler, i.e., 0.4
 **.countExeTime = true
 
@@ -92,7 +92,7 @@ sim-time-limit = 900s
 # Greedy, FastLR, GameTheory, Iterative, SARound for VEC without backhaul network
 # FwdGreedy, FwdGameTheory, FwdQuickLR, FwdGraphMatch for VEC with backhaul network
 **.scheduleInterval = 10s	# 5, 10, 15, 20
-**.scheduleScheme = "FwdGreedy"
+**.scheduleScheme = "Greedy"
 **.offloadOverhead = 0.001s
 **.countExeTime = true	# whether to count the execution time of schedule scheme, default is true
 **.scheduler.localPort = 1000
