--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,4 @@ simulations/decentralized/results/
 out/
 simulations/decentralized/result-analysis/failure
 simulations/decentralized/result-analysis/normal
-    
+simulations/vec/result-analysis/
