--- a/simulations/decentralized/omnetpp.ini
+++ b/simulations/decentralized/omnetpp.ini
@@ -87,7 +87,7 @@ sim-time-limit = 100s
 # Greedy, FastLR, GameTheory, Iterative, SARound for VEC without backhaul network
 # FwdGreedy, FwdGameTheory, FwdQuickLR, FwdGraphMatch for VEC with backhaul network
 **.scheduleInterval = 10s	# 5, 10, 15, 20
-**.scheduleScheme = "FastSA"    # "Greedy", "FastSA", "GameTheory", "GraphMatch"
+**.scheduleScheme = "TraverseOnce"    # "Greedy", "FastSA", "GameTheory", "GraphMatch"
 # **.fairFactor = 0.5    # the fairness factor for the scheduler, i.e., 0.5
 **.offloadOverhead = 0.001s
 # **.scheduler.srvTimeScale_ = 1.0
@@ -137,12 +137,46 @@ extends = Uploading
 
 sim-time-limit = 900s
 seed-set = 2025
-# **.fairFactor = 1    # the fairness factor for the scheduler
-# *.ue[*].app[*].dlScale = 1    # the scale for the deadline of the app, default is 1.0. dl = dl / dlScale
-# **.serverExeScale = 3.0   # the scale for the server execution time for database, default is 1.0
 
 *.ue[*].numApps = ${appCount=3, 4}
 **.scheduleScheme = "${scheme=Greedy, FastSA, GameTheory, GraphMatch}"	# Greedy, FastSA, GameTheory, GraphMatch
+**.scheduleInterval = ${interval=5, 10, 15}s	# ${interval=5, 10, 15, 20}s
+**.pilotMode = "MAX_CQI"   # "${pilot=MAX_CQI, MEDIAN_CQI, MIN_CQI}"
+
+# Statistics 
+output-scalar-file = ${resultdir}/${configname}/${scheme}-interval-${interval}-appCount-${appCount}.sca
+output-vector-file = ${resultdir}/${configname}/${scheme}-interval-${interval}-appCount-${appCount}.vec
+# example: Greedy-interval-10-appCount-3.sca, Greedy-interval-10-appCount-3.vec
+
+# --------------------------------------------------------#   
+[Config Ablation-FWD]    # Ablation Experiment for forwarding mechanism
+extends = Uploading
+**.maxHops = 4
+
+sim-time-limit = 900s
+seed-set = 2025
+
+**.srsDistance = ${targetNum=300, 450, 600}m  # the distance for SRS transmission, default is 600m
+*.ue[*].numApps = 4
+**.scheduleScheme = "${scheme=FastSA, FastSANF}"	# Greedy, FastSA, GameTheory, GraphMatch
+**.scheduleInterval = ${interval=10}s	# ${interval=5, 10, 15, 20}s
+**.pilotMode = "MAX_CQI"   # "${pilot=MAX_CQI, MEDIAN_CQI, MIN_CQI}"
+
+# Statistics 
+output-scalar-file = ${resultdir}/${configname}/${scheme}-interval-${interval}-targetNum-${targetNum}.sca
+output-vector-file = ${resultdir}/${configname}/${scheme}-interval-${interval}-targetNum-${targetNum}.vec
+# example: Greedy-interval-10-appCount-3.sca, Greedy-interval-10-appCount-3.vec
+
+# --------------------------------------------------------#   
+[Config Ablation-ND]    # Ablation Experiment for category dividing mechanism
+extends = Uploading
+**.maxHops = 4
+
+sim-time-limit = 900s
+seed-set = 2025
+
+*.ue[*].numApps = ${appCount=4}
+**.scheduleScheme = "${scheme=FastSAND}"	# FastSA, TraverseOnce, 
 **.scheduleInterval = ${interval=5, 10, 15}s	# ${interval=5, 10, 15, 20}s
 **.pilotMode = "MAX_CQI"   # "${pilot=MAX_CQI, MEDIAN_CQI, MIN_CQI}"
 
